--- a/index.html
+++ b/index.html
@@ -3,9 +3,33 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>EducAmbiental- Uso Sustentável</title>
+    <link rel="stylesheet" href="style.css"
+
 </head>
 <body>
-    
+    <header>
+        <h1>EducAmbiental</h1>
+        <h2>Uso Sustentável de Recursos Naturais</h2>
+    </header>
+    <main>
+    <section>
+        <h3>Sobre</h3>
+        <p>O EducAmbiental é um site que visa educar sobre a 
+        importância o uso sustentável de recuros naturais.</p>
+    </section>
+    <section>
+        <h3>Recursos</h3>
+        <nav></nav>
+        <ul>
+        <li> <a href="Água.html"> </a> Água </li>
+        <li> <a href="Energia.html"> </a>Energia </li>
+        <li> <a href="Florestas.html"></a>Florestas</li>
+        </ul>
+    </section>
+    </main>
+    <footer>
+        <p>&copy; 2025 EducAmbiental</p>
+    </footer>
 </body>
 </html>
