--- a/index.html
+++ b/index.html
@@ -1,35 +1,31 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
+<html lang="pt-br">
+<head>                                                                 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>EducAmbiental- Uso Sustentável</title>
-    <link rel="stylesheet" href="style.css"
-
+    <title>EcoConecta</title>
+    <link rel="stylesheet" href="style.css" 
 </head>
-<body>
+<body> 
     <header>
-        <h1>EducAmbiental</h1>
-        <h2>Uso Sustentável de Recursos Naturais</h2>
+        <h1>EcoConecta</h1>
+        <p>Conectados pelo Alimento e pelo Futuro Sustentável</p>
     </header>
     <main>
     <section>
-        <h3>Sobre</h3>
-        <p>O EducAmbiental é um site que visa educar sobre a 
-        importância o uso sustentável de recuros naturais.</p>
+        <h2>Bem-vindo!</h2>
+        <p>O EcoConecta é um site que visa educar sobre a 
+        importância da interdepêndencia entre campo e cidade para contruir
+        um futuro melhor.</p>
     </section>
-    <section>
-        <h3>Recursos</h3>
-        <nav></nav>
-        <ul>
-        <li> <a href="Água.html"> </a> Água </li>
-        <li> <a href="Energia.html"> </a>Energia </li>
-        <li> <a href="Florestas.html"></a>Florestas</li>
-        </ul>
+
+    <section class="botoes">
+    <a href="campo.html" class="botao"> Vida no Campo </a>
+    <a href="cidade.html" class="botao"> Vida na Cidade </a>
     </section>
     </main>
     <footer>
-        <p>&copy; 2025 EducAmbiental</p>
+        <p>&copy; 2025 - EcoConecta</p>
     </footer>
-</body>
 </html>
+</body>
