--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     </section>
 
     <section class="botoes">
-    <a href="campo.html" class="botao"> Vida no Campo </a>
+    <a href="campo.html" class="botao"> Vida no Campo</a>
     <a href="cidade.html" class="botao"> Vida na Cidade </a>
     </section>
     </main>
@@ -29,3 +29,38 @@
     </footer>
 </html>
 </body>
+
+<!DOCTYPE html>
+<html lang="pt-br">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Vida no Campo</title>
+    <link rel="stylesheet" href="style.css"
+</head>
+<body>
+    <header> 
+  <h1>Vida no Campo</h1>
+  <a href="index.html"> ⟵ Voltar</a>
+    </header>
+    <main>
+        <section> 
+<p>O campo é onde acontece a produção de grande parte dos 
+    alimentos que chegam até nossas mesas. 
+    Nele vivem pessoas que cultivam, colhem e cuidam da nossa terra.</p>
+        </section>
+        <section>
+<h2>Importância do Campo</h2>
+<ul>
+<li>Produção de alimentos e matérias-primas.</li>
+<li>Preservação da natureza e biodiversidade.</li>
+<li>Tradições culturais e saberes do interior.</li>
+</ul>   
+</section>
+    </main>
+    <footer>
+    </footer>
+</body>
+</html>
+
